--- a/templates/compare.html
+++ b/templates/compare.html
@@ -20,6 +20,7 @@ NEX for {{ dpa_id }}
                         <li><a href="t">/t = txtwerk</a></li>
                         <li><a href="y">/y = aylien</a></li>
                         <li><a href="t">/t = textrazor</a></li>
+                        <li><a href="x">/x = txt_alt</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="ads">example: /ad = ambiverse + dandelion</a></li>
                     </ul>
